--- a/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
+++ b/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
@@ -1,8 +1,13 @@
 # blancoResourceBundle properties file for locale [default]
+# generated at 2020/08/30 12:40:08
 ## \u57FA\u672C\u52D5\u4F5C\u3092\u8A18\u8FF0\u3057\u307E\u3059\u3002\u539F\u5247\u7684\u306B\u5909\u66F4\u3057\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 SELECT.SCROLL=forward_only
 SELECT_ALL.SCROLL=insensitive
 SELECT_UPDATABLE.SCROLL=insensitive
+CONNECTIONMETHOD.STANDARD=standard
+CONNECTIONMETHOD.ORIGINAL=original
+CONNECTTO.DEFAULT=default
+CONNECTTO.ALTERNATIVE=alternative
 ## \u5358\u4E00\u8868\u306E\u60C5\u5831\u53D6\u5F97\u306B\u3064\u3044\u3066\u52D5\u4F5C\u3092\u898F\u5B9A\u3057\u307E\u3059\u3002
 ## \u5358\u4E00\u8868\u306E\u5217\u306B\u3064\u3044\u3066\u578B\u304C\u51E6\u7406\u3067\u304D\u306A\u3044\u3068\u304D (true:\u578B\u304C\u51E6\u7406\u3067\u304D\u306A\u3044\u3068\u304D\u306F\u51E6\u7406\u4E2D\u65AD\u3001false:\u578B\u304C\u51E6\u7406\u3067\u304D\u306A\u3044\u5834\u5408\u306F\u7121\u8996)
 TYPE_MAPPING.FAIL_ON_ERROR=true
