--- a/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
+++ b/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
@@ -1,5 +1,5 @@
 # blancoResourceBundle properties file for locale [default]
-# generated at 2020/08/30 12:40:08
+# generated at 2020/09/06 21:57:49
 ## \u57FA\u672C\u52D5\u4F5C\u3092\u8A18\u8FF0\u3057\u307E\u3059\u3002\u539F\u5247\u7684\u306B\u5909\u66F4\u3057\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 SELECT.SCROLL=forward_only
 SELECT_ALL.SCROLL=insensitive
@@ -24,3 +24,10 @@ XML2JAVACLASS.ERR006=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u51FA\u529B\u30D1\u30E9\u30
 XML2JAVACLASS.ERR007=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u51FA\u529B\u30D1\u30E9\u30E1\u30FC\u30BF{1}\u306B\u304A\u3044\u3066\u3001\u30D1\u30E9\u30E1\u30FC\u30BFID[{2}]\u306E\u578B\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 XML2JAVACLASS.ERR008=SQL\u5B9A\u7FA9ID[{0}]\u306F\u300C\u547C\u51FA\u578B\u300D\u3067\u306A\u3044\u306E\u306BSQL\u51FA\u529B\u30D1\u30E9\u30E1\u30FC\u30BF{1}\u3001\u30D1\u30E9\u30E1\u30FC\u30BFID[{2}]\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 XML2JAVACLASS.ERR009=SQL\u5B9A\u7FA9ID[{0}]\u306E\u30BF\u30A4\u30E0\u30A2\u30A6\u30C8[{1}]\u306F\u6570\u5024\u3068\u3057\u3066\u8A8D\u8B58\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+XML2JAVACLASS.ERR010=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u30BF\u30B0\u540D\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR011=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u30BF\u30B0\u540D[{1}]\u306B\u304A\u3044\u3066\u30AD\u30FC\u6587\u5B57\u5217\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR012=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u30BF\u30B0\u540D[{1}]\u306B\u304A\u3044\u3066\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR013=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u5BFE\u8C61item\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR014=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u6BD4\u8F03\u6F14\u7B97\u5B50\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR015=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u8AD6\u7406\u6F14\u7B97\u5B50\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR016=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u5024\u306E\u578B\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
