--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>blanco.db.common</groupId>
 	<artifactId>blanco-dbcommon</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1.0</version>
+	<version>2.1.1</version>
 	<name>blanco-dbcommon</name>
 	<url>https://igapyon.github.io/blancofw-maven2</url>
 
@@ -223,7 +223,7 @@
 							<target>
 								<taskdef name="blancovalueobject" classname="blanco.valueobject.task.BlancoValueObjectTask" classpathref="maven.runtime.classpath">
 								</taskdef>
-								<blancovalueobject metadir="meta/program" encoding="${project.build.sourceEncoding}" sheetType="php"/>
+								<blancovalueobject metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
 						</configuration>
 						<goals>
@@ -355,20 +355,20 @@
 			</plugin>
 
 			<!-- copy jar files into lib directory. -->
-			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+<!--			<plugin>-->
+<!--				<artifactId>maven-dependency-plugin</artifactId>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<phase>install</phase>-->
+<!--						<goals>-->
+<!--							<goal>copy-dependencies</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 
 			<plugin>
 				<groupId>com.github.github</groupId>
