--- a/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
+++ b/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
@@ -1,5 +1,5 @@
 # blancoResourceBundle properties file for locale [default]
-# generated at 2020/09/07 12:36:29
+# generated at 2020/09/08 13:06:37
 ## \u57FA\u672C\u52D5\u4F5C\u3092\u8A18\u8FF0\u3057\u307E\u3059\u3002\u539F\u5247\u7684\u306B\u5909\u66F4\u3057\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 SELECT.SCROLL=forward_only
 SELECT_ALL.SCROLL=insensitive
@@ -31,3 +31,4 @@ XML2JAVACLASS.ERR013=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F
 XML2JAVACLASS.ERR014=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u6BD4\u8F03\u6F14\u7B97\u5B50\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 XML2JAVACLASS.ERR015=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u8AD6\u7406\u6F14\u7B97\u5B50\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 XML2JAVACLASS.ERR016=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u5024\u306E\u578B\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR017=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306F\u672A\u5B9A\u7FA9\u3067\u3059\u3002
