--- a/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
+++ b/blanco/main/blanco/db/common/resourcebundle/BlancoDbCommon.properties
@@ -1,5 +1,5 @@
 # blancoResourceBundle properties file for locale [default]
-# generated at 2021/05/20 10:10:30
+# generated at 2021/07/05 14:03:30
 ## \u57FA\u672C\u52D5\u4F5C\u3092\u8A18\u8FF0\u3057\u307E\u3059\u3002\u539F\u5247\u7684\u306B\u5909\u66F4\u3057\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 SELECT.SCROLL=forward_only
 SELECT_ALL.SCROLL=insensitive
@@ -32,3 +32,11 @@ XML2JAVACLASS.ERR014=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F
 XML2JAVACLASS.ERR015=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u8AD6\u7406\u6F14\u7B97\u5B50\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 XML2JAVACLASS.ERR016=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306B\u304A\u3044\u3066\u5024\u306E\u578B\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 XML2JAVACLASS.ERR017=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7[{1}]\u306F\u672A\u5B9A\u7FA9\u3067\u3059\u3002
+XML2JAVACLASS.ERR018=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u95A2\u6570\u5B9A\u7FA9\u3067\u95A2\u6570\u30BF\u30B0\u540D\u304C\u672A\u5B9A\u7FA9\u3067\u3059\u3002
+XML2JAVACLASS.ERR019=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u95A2\u6570\u5B9A\u7FA9\u3067\u95A2\u6570\u30BF\u30B0\u540D[{1}]\u306B\u304A\u3044\u3066\u95A2\u6570\u540D\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR020=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u95A2\u6570\u5B9A\u7FA9\u3067\u95A2\u6570\u30BF\u30B0\u540D[{1}]\u306B\u304A\u3044\u3066\u30D1\u30E9\u30E1\u30FC\u30BF\u6570\u304C\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR021=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u95A2\u6570\u5B9A\u7FA9\u3067\u95A2\u6570\u30BF\u30B0\u540D[{1}]\u306B\u304A\u3044\u3066\u4E0D\u6B63\u306A\u30D1\u30E9\u30E1\u30FC\u30BF\u6570\u304C\u6307\u5B9A\u3055\u308C\u307E\u3057\u305F\u3002
+XML2JAVACLASS.ERR022=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u95A2\u6570\u5B9A\u7FA9\u3067\u95A2\u6570\u30BF\u30B0\u540D[{1}]\u306B\u304A\u3044\u3066\u30D1\u30E9\u30E1\u30FC\u30BF [{2}]\u306E\u578B\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+XML2JAVACLASS.ERR023=SQL\u5B9A\u7FA9ID[{0}]\u306ESQL\u52D5\u7684\u6761\u4EF6\u5F0F\u5B9A\u7FA9\u3067\u6761\u4EF6\u53E5\u30BF\u30A4\u30D7FUNCTION\u306B\u304A\u3044\u3066\u95A2\u6570\u30BF\u30B0[{1}]\u306F\u672A\u5B9A\u7FA9\u3067\u3059\u3002
+## Excel\u30E1\u30BF\u30D5\u30A1\u30A4\u30EB\u30FB\u30C1\u30A7\u30C3\u30AF\u7D50\u679C\u901A\u77E5\u30E1\u30C3\u30BB\u30FC\u30B8
+XML2JAVACLASS.INFO001=SQL\u5B9A\u7FA9ID[{0}]\u306E\u52D5\u7684\u95A2\u6570\u5B9A\u7FA9[{1}]\u3067\u306F\u8A66\u9A13\u5B9F\u884C\u306E\u30B9\u30AD\u30C3\u30D7\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u3059\u3002
